--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using MVC_StudentInFormation
-@using MVC_StudentInFormation.Models
+﻿@using StudentCRUD
+@using StudentCRUD.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
