--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -9,15 +9,18 @@
     Are you sure you want to delete this student?
 </div>
 
-<table class="table">
-    <tr><th>Id</th><td>@Model.Id</td></tr>
+<table class="table table-bordered">
     <tr><th>Name</th><td>@Model.Name</td></tr>
     <tr><th>Email</th><td>@Model.Email</td></tr>
+    <tr><th>Mobile</th><td>@Model.MobileNumber</td></tr>
+    <tr><th>State</th><td>@Model.State</td></tr>
     <tr><th>Gender</th><td>@Model.Gender</td></tr>
+    <tr><th>Date of Birth</th><td>@Model.DateOfBirth.ToString("yyyy-MM-dd")</td></tr>
 </table>
 
-<form asp-action="Delete" method="post">
+<form asp-action="DeleteConfirmed" method="post">
     <input type="hidden" asp-for="Id" />
-    <button type="submit" class="btn btn-danger">Yes, delete</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a class="btn btn-secondary" href="/Student/Index">Cancel</a>
 </form>
+
