--- a/Views/Student/Create.cshtml
+++ b/Views/Student/Create.cshtml
@@ -6,22 +6,25 @@
 
 <h2>Add Student</h2>
 
+<
 <form asp-action="Create" method="post">
+    
+    <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="mb-3">
-        <label asp-for="Name" class="form-label"></label>
+        <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="Email" class="form-label"></label>
+        <label asp-for="Email"></label>
         <input asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="MobileNumber" class="form-label"></label>
+        <label asp-for="MobileNumber"></label>
         <input asp-for="MobileNumber" class="form-control" />
         <span asp-validation-for="MobileNumber" class="text-danger"></span>
     </div>
@@ -42,7 +45,7 @@
     <div class="mb-3">
         <label class="form-label">Gender</label><br />
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" asp-for="Gender" value="Male" />   
+            <input class="form-check-input" type="radio" asp-for="Gender" value="Male" />
             <label class="form-check-label">Male</label>
         </div>
 
